--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "mysql": "github:mysqljs/mysql",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.6",
     "npm": "^8.1.4",
     "ts-node": "^9.0.0",
